--- a/style.css
+++ b/style.css
@@ -38,3 +38,21 @@ section::after {
     transform: translate(150px, 100px);
     background: linear-gradient(90deg, #9c27b0, #f3f5f5);
 }
+
+.container{
+    position: relative;
+    height: 225px;
+    width: 375px;
+    z-index: 100;
+}
+
+
+.container .card{
+    height: 100%;
+    width: 100%;
+    border-radius: 25px;
+    backdrop-filter: blur(25px);
+    background: rgba(255, 255, 255, 0.1);
+    box-shadow: 0 25px 45px rgba(0, 0, 0, 0.25);
+    border: 1px solid rgba(255, 255, 255, 0.1);
+}
