--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ section::after {
 
 
 .container .card{
+    position: absolute;
     height: 100%;
     width: 100%;
     padding: 25px;
@@ -108,10 +109,11 @@ h5.name{
 .card.back-face{
     border: none;
     padding: 15px 25px 25px 25px;
+    transform: rotateY(180deg);
 }
 
 
-.card.back-face .h6{
+.card.back-face h6{
     font-size: 8px;
 }
 
@@ -126,10 +128,28 @@ h5.name{
 
 
 .card.back-face .signature{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
     margin-top: 80px;
     height: 40px;
     width: 85%;
     border-radius: 6px;
-    background-color: #fff;
+    background: repeating-linear-gradient(#fff, #fff 3px, #efefef 0px, #efefef 9px);
 
+}
+
+.signature i{
+    color: #000;
+    font-size: 12px;
+    padding: 4px 6px;
+    border-radius: 4px;
+    background-color: #fff;
+    margin-right: -30px;
+    z-index: -1;
+}
+
+.card.back-face h5{
+    font-size: 8px;
+    margin-top: 15px;
 }
