--- a/style.css
+++ b/style.css
@@ -45,6 +45,13 @@ section::after {
     height: 225px;
     width: 375px;
     z-index: 100;
+    transition: 0.6s;
+    transform-style: preserve-3d;
+}
+
+
+.container:hover {
+    transform: rotateY(180deg);
 }
 
 
@@ -58,6 +65,7 @@ section::after {
     background: rgba(255, 255, 255, 0.1);
     box-shadow: 0 25px 45px rgba(0, 0, 0, 0.25);
     border: 1px solid rgba(255, 255, 255, 0.1);
+    backface-visibility: hidden;
 }
 
 
